landing page done

--- a/article.html
+++ b/article.html
@@ -107,6 +107,11 @@
         <p class="description">Read our blog and try to see everything from every perspective. Our passion lies in making everything accessible and aesthetic for everyone.</p>
     </section>
 
+    <div class="article-search">
+      <input type="text" id="searchInput" placeholder="
+      search for articles..." />
+    </div>
+
     <div class="article-section">
     <div class="article-card">
       <img src="assets/img/article/Layanan-Desain-Grafis-Di-Jakarta.png.jpg" alt="Desain Grafis">
@@ -132,6 +137,40 @@
     </div>
 
 
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-col logo-section">
+          <img src="assets/img/Logo/logo.png" alt="Digitally Logo" class="logo">
+          <p>Digital Marketing Agency yang memberikan servis terlengkap untuk semua kebutuhan branding Anda.</p>
+        </div>
+        <div class="footer-col contact-section">
+          <h3>CONTACT</h3>
+          <p><strong>T</strong> : +62 8129 0906 309</p>
+          <p><strong>E</strong> : team@jtdigitally.com</p>
+          <div class="social-icons">
+            <a href="#"><i class="ri-facebook-fill"></i></a>
+            <a href="#"><i class="ri-whatsapp-fill"></i></a>
+            <a href="#"><i class="ri-instagram-line"></i></a>
+            <a href="#"><i class="ri-youtube-fill"></i></a>
+            <a href="#"><i class="ri-tiktok-fill"></i></a>
+            <a href="#"><i class="ri-mail-line"></i></a>
+          </div>
+        </div>
+        <div class="footer-col address-section">
+          <h3>ADDRESS</h3>
+          <div>
+            <p><strong>YOGYAKARTA</strong></p>
+            <p>JALAN BIMA NO. 164, PANGGUNGSARI, SARIHARJO, NGAGLIK, SLEMAN, YOGYAKARTA</p>
+          </div>
+          <div>
+            <p><strong>JAKARTA</strong></p>
+            <p>JL. CAKALANG NO.26, RT.10/RW.8, JATI, KEC. PULO GADUNG, KOTA JAKARTA TIMUR, DAERAH KHUSUS IBUKOTA JAKARTA 13220</p>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <p class="footer-bottom">© 2021 JT Digitally. All Right Reserved</p>
+    </footer>
 
 
     <!-- ? Swiper JS -->
