--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <!-- ? kolom tengah -->
             <div class="menu-center">
               <ul>
-                <li class="#"><a href="index.html">Home</a></li>
-                <li class="active"><a href="#">About</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">service</a></li>
                 <li><a href="article.html">article</a></li>
                 <li><a href="#">contact</a></li>
@@ -397,6 +397,10 @@
     </div>
     </div>
 
+    <div class="button">
+      <a href="article.html" class="btn">See More Article <i class="ri-arrow-right-line"></i></a>
+    </div>
+
     <section class="brand">
       <div class="text-brand">
         <h1>What our <span>clients said about us</span></h1>
@@ -430,7 +434,7 @@
       <div class="footer-container">
         <div class="footer-col logo-section">
           <img src="assets/img/Logo/logo.png" alt="Digitally Logo" class="logo">
-          <p>Digital Marketing Agency yang memberikan servis terlengkap untuk semua kebutuhan branding Anda.</p>
+          <p class="desc-footer">Digital Marketing Agency yang memberikan servis terlengkap untuk semua kebutuhan branding Anda.</p>
         </div>
         <div class="footer-col contact-section">
           <h3>CONTACT</h3>
