done menu home, about, article

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JTDigitally</title>
+    <title>JT Digitally - Digitally Marketing</title>
     
     <!-- ? Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -33,9 +33,9 @@
           <img src="assets/img/Logo/logo.png" alt="#">
         </div>
 
-        <ul class="nav-links id="navLinks"">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+        <ul class="nav-links" id="navLinks">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Services <i class="ri-arrow-down-s-line"></i></a></li>
           <li><a href="article.html">Article</a></li>
           <li><a href="#">Contact</a></li>
@@ -70,7 +70,7 @@
             <div class="menu-center">
               <ul>
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">service</a></li>
                 <li><a href="article.html">article</a></li>
                 <li><a href="#">contact</a></li>
