menambahkan page baru layanan desain di article

--- a/pages/layanan-desain.html
+++ b/pages/layanan-desain.html
@@ -18,7 +18,7 @@
     />
 
     <!-- ? css -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
 
     <!-- ? favicos -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -27,7 +27,7 @@
     <header class="custom-navbar">
       <div class="navbar-container">
         <div class="logo">
-          <img src="assets/img/Logo/logo.png" alt="#">
+          <img src="../assets/img/Logo/logo.png" alt="#">
         </div>
 
         <ul class="nav-links" id="navLinks">
@@ -51,7 +51,7 @@
             <!-- ? kolom kiri -->
             <div class="menu-left">
               <div class="left-box">
-                 <img src="assets/img/Logo/logo.png" alt="">
+                 <img src="../assets/img/Logo/logo.png" alt="">
                 <div class="list-menu-left">
                   <h4>follow us</h4>
                   <P>facebook</P>
@@ -79,7 +79,7 @@
             <div class="menu-right">
               <div class="right-box">
                 <div class="img-right">
-                  <img src="assets/img/Logo/Dekorasi-02.png" alt="">
+                  <img src="../assets/img/Logo/Dekorasi-02.png" alt="">
                 </div>
 
                 <div>
@@ -95,34 +95,43 @@
       </div>
     </header>
 
-    <section class="hero-section">
-        <div class="section-title-text article">
-          <p>RECENT BLOG</p>
-          <h2>
-            READ UPDATED <br />
-            JOURNAL
-          </h2>
+    <article class="container-article">
+      <div class="box-article">
+        <div class="article-img">
+          <img src="../assets/img/article/Layanan-Desain-Grafis-Di-Jakarta.png.jpg" alt="layanan desain grafis">
         </div>
-
-        <p class="description">Read our blog and try to see everything from every perspective. Our passion lies in making everything accessible and aesthetic for everyone.</p>
-    </section>
-
-    <div class="article-search">
-      <div class="search-wrapper">
-        <i class="ri-search-line search-icon"></i>
-       <input type="text" id="searchInput" placeholder="Search for articles..." />
+  
+        <div class="desc-article">
+          <h4>layanan desain grafis di jakarta harga pemula</h4>
+          <p>Layanan desain grafis di Jakarta – Siapa sih yang gak bisa desain menghasilkan desain grafis, di era saat ini? Hampir semua orang pasti bisa melakukannya. Sebab saat ini sudah terdapat aplikasi yang menyediakan ribuan template. Yang mana template tersebut dapat di edit secara gratis.</p>
+          <p>Di dalam proses edit desain grafis inilah yang menjadi hasil penentu kualitas. Jika kualitas desain grafis baik, maka ketika di posting untuk keperluan konten dapat mendatangkan engagement dari audience. Dan sebaliknya, jika kualitas konten kurang, maka tidak dapat mendatangkan apa – apa ketika di posting di media online.</p>
+          <p>Kualitas desain yang kurang maksimal, mungkin disebabkan karena beberapa hal. Seperti banyak aktivitas bisnis yang harus dikerjakan, bukan prioritas dan tidak suka desain grafis. Penyebab tersebut mungkin saja bisa terjadi, karena kamu adalah bos yang memegang kendali atas bisnis yang sedang kamu jalani. Kalau sudah begini, mending pakai aja.</p>
+          <h4>jasa desain grafis murah dan amanah</h4>
+          <p>banyak layanan desain grafis di jakarta yang kurang murah tapi amanah. Kurang amanah yang saya maksud adalah semua permintaan yang diiinginkan oleh pengguna jasa tidak terpenuhi secara penuh</p>
+          <p>jika sudah begini maka tidak akan ada rasa saling menguntungkan, hanya pihak penyedia layanan saja yang akan merasa untung. Jasa yang seperti inilah yang sebenernya harus kamu hindari.</p>
+          <p>Untuk itu, JT Digitally hadir memberikan jasa desain grafis para pengusaha di Jakarta dengan harga miring kualitas terjamin.</p>
+          <h4>harga jasa desain grafis paling laris</h4>
+          <p>Apa keperluanmu, sehingga ingin menggunakan layanan jasa desain grafis? Apakah untuk desain branding, desain konten untuk iklan atau desain konten media sosial? Beda jenis desain, beda juga harga yang harus bayar untuk setiap jenis desain.</p>
+          <p>Desain branding meliputi jasa desain logo, jasa desain katalog produk, jasa desain company profile, jasa desain merchandise, jasa desain kartu nama, jasa desain kop surat, jasa desain map dan jasa desain label produk. Untuk desain iklan meliputi jasa banner iklan, jasa desain iklan di Facebook, Instagram, Tiktok dan jasa desain banner website. Dan untuk jasa desain sosmed ada jasa desain konten media sosial, jasa desain story media sosial dan jasa desain banner Facebook.</p>
+          <p style="font-weight: bold;">Baca Juga :</p>
+          <h4>jasa desain grafis terdekat</h4>
+          <p>Yang dekat belum tentu hebat. Gak perlu cari dekat jika kualitasnya bikin sekarat. Kata ini bertujuan supaya para pencari jasa desain grafis seperti kamu tidak memaksakan mencari layanan yang masih satu kota.</p>
+          <p>Dengan adanya media sosial, internet dan website, kamu bisa menggunakan jasa desain grafis yang ada di seluruh penjuru Indonesia, seperti di Jt Digitally di yang berada di kota jakarta.</p>
+          <p>Gak perlu datang langsung ke gedung penyedia jasa, proses pemesanan bisa melalui website dan proses diskusi bisa dilakukan dengan cara melalui Google Meeting. Dengan cara seperti ini kamu juga dapat menghemat energi dan waktu perjalanan untuk menuju ke lokasi secara langsung.</p>
+        </div>
       </div>
-    </div>
+    </article>
 
-    <div class="article-section" id="articleSection">
-
-    </div>
+    <section class="previous">
+      <a href="#" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
+      <a href="#" class="right">next post <i class="ri-arrow-right-line"></i></a>
+    </section>
 
 
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-col logo-section">
-          <img src="assets/img/Logo/logo.png" alt="Digitally Logo" class="logo">
+          <img src="../assets/img/Logo/logo.png" alt="Digitally Logo" class="logo">
           <p>Digital Marketing Agency yang memberikan servis terlengkap untuk semua kebutuhan branding Anda.</p>
         </div>
         <div class="footer-col contact-section">
@@ -158,6 +167,6 @@
     <!-- ? Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script src="assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 </html>
