menambahkan banyak page dan memperbaiki beberapa menu

--- a/pages/jasa-branding.html
+++ b/pages/jasa-branding.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layanan Desain Grafis</title>
+    <title>Jasa Branding Produk UMKM</title>
 
     <!-- ? Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -98,33 +98,50 @@
     <article class="container-article">
       <div class="box-article">
         <div class="article-img">
-          <img src="../assets/img/article/Layanan-Desain-Grafis-Di-Jakarta.png.jpg" alt="layanan desain grafis">
+          <img src="../assets/img/article/Jasa-Branding-Produk-UMKM-1024x576.png.jpg" alt="#">
         </div>
   
         <div class="desc-article">
-          <h4>layanan desain grafis di jakarta harga pemula</h4>
-          <p>Layanan desain grafis di Jakarta – Siapa sih yang gak bisa desain menghasilkan desain grafis, di era saat ini? Hampir semua orang pasti bisa melakukannya. Sebab saat ini sudah terdapat aplikasi yang menyediakan ribuan template. Yang mana template tersebut dapat di edit secara gratis.</p>
-          <p>Di dalam proses edit desain grafis inilah yang menjadi hasil penentu kualitas. Jika kualitas desain grafis baik, maka ketika di posting untuk keperluan konten dapat mendatangkan engagement dari audience. Dan sebaliknya, jika kualitas konten kurang, maka tidak dapat mendatangkan apa – apa ketika di posting di media online.</p>
-          <p>Kualitas desain yang kurang maksimal, mungkin disebabkan karena beberapa hal. Seperti banyak aktivitas bisnis yang harus dikerjakan, bukan prioritas dan tidak suka desain grafis. Penyebab tersebut mungkin saja bisa terjadi, karena kamu adalah bos yang memegang kendali atas bisnis yang sedang kamu jalani. Kalau sudah begini, mending pakai aja.</p>
-          <h4>jasa desain grafis murah dan amanah</h4>
-          <p>banyak layanan desain grafis di jakarta yang kurang murah tapi amanah. Kurang amanah yang saya maksud adalah semua permintaan yang diiinginkan oleh pengguna jasa tidak terpenuhi secara penuh</p>
-          <p>jika sudah begini maka tidak akan ada rasa saling menguntungkan, hanya pihak penyedia layanan saja yang akan merasa untung. Jasa yang seperti inilah yang sebenernya harus kamu hindari.</p>
-          <p>Untuk itu, JT Digitally hadir memberikan jasa desain grafis para pengusaha di Jakarta dengan harga miring kualitas terjamin.</p>
-          <h4>harga jasa desain grafis paling laris</h4>
-          <p>Apa keperluanmu, sehingga ingin menggunakan layanan jasa desain grafis? Apakah untuk desain branding, desain konten untuk iklan atau desain konten media sosial? Beda jenis desain, beda juga harga yang harus bayar untuk setiap jenis desain.</p>
-          <p>Desain branding meliputi jasa desain logo, jasa desain katalog produk, jasa desain company profile, jasa desain merchandise, jasa desain kartu nama, jasa desain kop surat, jasa desain map dan jasa desain label produk. Untuk desain iklan meliputi jasa banner iklan, jasa desain iklan di Facebook, Instagram, Tiktok dan jasa desain banner website. Dan untuk jasa desain sosmed ada jasa desain konten media sosial, jasa desain story media sosial dan jasa desain banner Facebook.</p>
-          <p style="font-weight: bold;">Baca Juga :</p>
-          <h4>jasa desain grafis terdekat</h4>
-          <p>Yang dekat belum tentu hebat. Gak perlu cari dekat jika kualitasnya bikin sekarat. Kata ini bertujuan supaya para pencari jasa desain grafis seperti kamu tidak memaksakan mencari layanan yang masih satu kota.</p>
-          <p>Dengan adanya media sosial, internet dan website, kamu bisa menggunakan jasa desain grafis yang ada di seluruh penjuru Indonesia, seperti di Jt Digitally di yang berada di kota jakarta.</p>
-          <p>Gak perlu datang langsung ke gedung penyedia jasa, proses pemesanan bisa melalui website dan proses diskusi bisa dilakukan dengan cara melalui Google Meeting. Dengan cara seperti ini kamu juga dapat menghemat energi dan waktu perjalanan untuk menuju ke lokasi secara langsung.</p>
+          <h4>Jasa Branding Produk UMKM Di Jakarta</h4>
+          <p>Jasa branding produk UMKM – Mengenalkan produk ke konsumen, hingga membuat para konsumen hafal, tidaklah mudah bos. Contohnya, ketika ada orang yang ingin terkenal di dunia maya atau yang ingin nyaleg, mereka harus sering muncul di hadapan masyarakat, selalu ikut berpartisipasi dalam suatu pembangunan, memberikan manfaat dan hal – hal lainya yang bisa membuat audience mengenal  dan menghafal.</p>
+          <p>Kasus tersebut sama saat kamu ingin branding produk. Anggap saja orang yang ingin membranding diri tadi adalah produk. Produk sering muncul di saat konsumen berbelanja online dan offline, dapat memberikan manfaat, enak dan memiliki ciri khusus yang mudah diingat.</p>
+          <p>Tapi, masalahnya aktivitas branding ini tidaklah mudah. Perlu beberapa team kreatif yang bisa diajak diskusi untuk mendapatkan ide – ide bagus. Maka banyak para pengusaha sama seperti kamu yang memilih untuk menggunakan jasa branding produk. Jasa branding produk nanti akan terbagi menjadi 5 bagian.</p>
+          <h4 style="font-weight: bold;">Nama jasa Untuk Kebutuhan Branding</h4>
+          <ul class="list-article">
+            <li>jasa branding logo</li>
+          </ul>
+          <p>Kamu bisa pikirkan betapa pentingnya logo, hingga para pebisnis berlomba – lomba membuat logo lalu memamerkan gambar logo di depan gedung, baliho, kemasan dan media lainya.</p>
+          <p>Inilah mengapa logo menjadi bagian yang sangat penting dalam proses branding. Selain memiliki fungsi sebagai tanda pengenal, logo juga merupakan representasi dari citra , value dan visi suatu brand.</p>
+          <ul class="list-article">
+            <li>Jasa Branding Desain Packaging Kemasan</li>
+          </ul>
+          <p>Alat yang bisa kamu gunakan untuk branding berikutnya ada desain packaging. Setiap produk yang menggunakan kemasan untuk melindungi barang, pasti memiliki bentuk kemasan dan desain yang berbeda. Perbedaan ini untuk menunjukan ciri pada salah satu brand.</p>
+          <p>Maka dari itu bentuk dan desain kemasan yang baik memiliki peranan yang sangat penting dalam branding. Sehingga bisa menjadi silent salesman atau silent ambassador.</p>
+          <ul class="list-article">
+            <li>jasa branding menggunakan konten</li>
+          </ul>
+          <p>Jasa branding produk UMKM berikutnya lewat konten. Branding menggunakan konten paling optimal ialah menggunakan media sosial. Jumlah pengguna yang semakin banyak, bisa membuat peluang lebih besar untuk bisa sukses branding menggunakan konten.Oleh karena itu, pada saat pembuatan akun media sosial di awal, harus benar – benar disusun dengan konsep yang baik.</p>
+          <!-- <p style="font-weight: bold;">Baca Juga :</p> -->
+          <ul class="list-article">
+            <li>jasa branding menggunakan tulisan</li>
+          </ul>
+          <p>Hanya dengan tulisan, percaya atua tidak percaya orang bisa saja terkena hopnotis ketika membaca suatu tulisan.  Dengan menggunakan tulisan, kamu bisa menciptakan sebuah story bisnis, yang kemudian disampaikan secara rapi, singkat dan jelas ke audience.</p>
+          <ul class="list-article">
+            <li>jasa branding website</li>
+          </ul>
+          <p>Media terakhir yang bisa digunakan untuk branding lewat website. Branding menggunakan website, memiliki peran penting untuk memperkenalkan bisnis ke audiens lewat internet.</p>
+          <p>Meningkatkan pencarian informasi menggunakan Google, membuat branding lewat website ini menjadi favorit para pengusaha. Maka langkah branding website yang paling penting adalah membangun website dengan baik, sehingga bisa menjangkau konsumen lebih luas.</p>
+          <p>Dari 5 paket branding yang disediakan JT Digitally, kira – kira mana yang akan pilih untuk membranding bisnismu? Pilih salah satu paket dengan klik </p>
+          <h4 style="font-weight: bold;">jasa personal branding milik JT Digitally</h4>
+          <p>Jasa branding produk UMKM di jakarta di JT Digitally merupakan layanan untuk saling berdiskusi mengenai masalah branding dalam bisnis. Sehingga kami menyediakan jasa branding dengan tujuan membantu memecahkan masalah brand, agar brand memiliki strategi yang baik untuk berkembang.</p>
+          <p>Sebab ini adalah waktu yang paling tepat untuk bisnis, jika ingin mendominasi market. Kalau gak sekarang kapan lagi coba, proses branding itu lama loh, butuh waktu yang sangat panjang.</p>
         </div>
       </div>
     </article>
 
     <section class="previous">
-      <a href="#" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
-      <a href="jasa-pasang-iklan.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
+      <a href="jasa-pasang-iklan.html" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
+      <a href="jasa-membuat-website.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
     </section>
 
 
