--- a/pages/jasa-membuat-website.html
+++ b/pages/jasa-membuat-website.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layanan Desain Grafis</title>
+    <title>Jasa Membuat Website</title>
 
     <!-- ? Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -98,33 +98,52 @@
     <article class="container-article">
       <div class="box-article">
         <div class="article-img">
-          <img src="../assets/img/article/Layanan-Desain-Grafis-Di-Jakarta.png.jpg" alt="layanan desain grafis">
+          <img src="../assets/img/article/Jasa-membuat-website-ecommerce.png.webp" alt="#">
         </div>
   
         <div class="desc-article">
-          <h4>layanan desain grafis di jakarta harga pemula</h4>
-          <p>Layanan desain grafis di Jakarta – Siapa sih yang gak bisa desain menghasilkan desain grafis, di era saat ini? Hampir semua orang pasti bisa melakukannya. Sebab saat ini sudah terdapat aplikasi yang menyediakan ribuan template. Yang mana template tersebut dapat di edit secara gratis.</p>
-          <p>Di dalam proses edit desain grafis inilah yang menjadi hasil penentu kualitas. Jika kualitas desain grafis baik, maka ketika di posting untuk keperluan konten dapat mendatangkan engagement dari audience. Dan sebaliknya, jika kualitas konten kurang, maka tidak dapat mendatangkan apa – apa ketika di posting di media online.</p>
-          <p>Kualitas desain yang kurang maksimal, mungkin disebabkan karena beberapa hal. Seperti banyak aktivitas bisnis yang harus dikerjakan, bukan prioritas dan tidak suka desain grafis. Penyebab tersebut mungkin saja bisa terjadi, karena kamu adalah bos yang memegang kendali atas bisnis yang sedang kamu jalani. Kalau sudah begini, mending pakai aja.</p>
-          <h4>jasa desain grafis murah dan amanah</h4>
-          <p>banyak layanan desain grafis di jakarta yang kurang murah tapi amanah. Kurang amanah yang saya maksud adalah semua permintaan yang diiinginkan oleh pengguna jasa tidak terpenuhi secara penuh</p>
-          <p>jika sudah begini maka tidak akan ada rasa saling menguntungkan, hanya pihak penyedia layanan saja yang akan merasa untung. Jasa yang seperti inilah yang sebenernya harus kamu hindari.</p>
-          <p>Untuk itu, JT Digitally hadir memberikan jasa desain grafis para pengusaha di Jakarta dengan harga miring kualitas terjamin.</p>
-          <h4>harga jasa desain grafis paling laris</h4>
-          <p>Apa keperluanmu, sehingga ingin menggunakan layanan jasa desain grafis? Apakah untuk desain branding, desain konten untuk iklan atau desain konten media sosial? Beda jenis desain, beda juga harga yang harus bayar untuk setiap jenis desain.</p>
-          <p>Desain branding meliputi jasa desain logo, jasa desain katalog produk, jasa desain company profile, jasa desain merchandise, jasa desain kartu nama, jasa desain kop surat, jasa desain map dan jasa desain label produk. Untuk desain iklan meliputi jasa banner iklan, jasa desain iklan di Facebook, Instagram, Tiktok dan jasa desain banner website. Dan untuk jasa desain sosmed ada jasa desain konten media sosial, jasa desain story media sosial dan jasa desain banner Facebook.</p>
-          <p style="font-weight: bold;">Baca Juga :</p>
-          <h4>jasa desain grafis terdekat</h4>
-          <p>Yang dekat belum tentu hebat. Gak perlu cari dekat jika kualitasnya bikin sekarat. Kata ini bertujuan supaya para pencari jasa desain grafis seperti kamu tidak memaksakan mencari layanan yang masih satu kota.</p>
-          <p>Dengan adanya media sosial, internet dan website, kamu bisa menggunakan jasa desain grafis yang ada di seluruh penjuru Indonesia, seperti di Jt Digitally di yang berada di kota jakarta.</p>
-          <p>Gak perlu datang langsung ke gedung penyedia jasa, proses pemesanan bisa melalui website dan proses diskusi bisa dilakukan dengan cara melalui Google Meeting. Dengan cara seperti ini kamu juga dapat menghemat energi dan waktu perjalanan untuk menuju ke lokasi secara langsung.</p>
+          <h4>Jasa Membuat Website Ecommerce Di Jakarta</h4>
+          <p>Jasa membuat website ecommerce – Hay, apakah kamu hari ini lagi sibuk mencari pelayanan yang bisa membuatkan website ecommerce di area Jakarta dan sekitarnya? Rasanya, mustahil jika di pusat kota seperti jakarta kita kesulitan untuk menemukan jasa seperti ini.</p>
+          <p>Pasti udah banyak banget dong, nama – nama brand yang menyediakan jasa layanan pembuatan website profesional. Maka banyak para pengusaha, termasuk kamu yang ingin membuat website, khususnya website ecommerce lebih memilih bertanya kepada pengusaha sebelah soal nama brand pembuatan website terpercaya.</p>
+          <p>Namun banyak juga yang lebih memilih untuk mencari informasi jasa sendiri, mulai dari media sosial, iklan dan website. Semua jasa pembuatan toko online di jakarta, saya yakin semuanya terpercaya dan memiliki kualitas hasil masing – masing. Tinggal paket jasa apa yang dipilih dan keinginan desain toko online seperti apa yang ingin dibuat. Apalagi jika kamu menggunakan di JT Digitally</p>
+          <h4 style="font-weight: bold;">Manfaat Menggunakan Jasa Pembuatan Toko Online Di Jakarta</h4>
+          <p>Sebagai upaya bisnis untuk selalu mengikuti perkembangan jaman, tentu semua pebisnis ingin memiliki website sebagai toko online. Benarkan? Hal ini bertujuan untuk memperluas jangkauan pasar, menambah jumlah konsumen baru, menggunakan strategi marketing baru, ads, artikel, copywriting dan landing page.</p>
+          <ul class="list-article">
+            <li>Memperluas Jangkauan Pasar</li>
+          </ul>
+          <p>Seperti media sosial, dengan menggunakan website ecommerce jangkauan pasarmu juga akan bertambah luas. Semua target market yang kamu inginkan di penjuru daerah bisa melihat halaman toko onlinemu.</p>
+          <ul class="list-article">
+            <li>Mampu Menambah Jumlah Konsumen Baru</li>
+          </ul>
+          <p>Dengan bertambah luasnya jangkauan pasar, maka peluang mendapatkan jumlah konsumen baru juga akan bertambah. Ditambah lagi jika tampilan websitenya user friendly, pasti pengunjung juga akan semakin ayaman menjelajahi dan berbelanja.</p>
+          <ul class="list-article">
+            <li>Mendapat Strategi Marketing Baru</li>
+          </ul>
+          <p>Banyak ide marketing yang akan kamu lakukan etika memiliki website ecommerce ketimbang tidak memilikinya. Strategi marketing tersebut seperti google ads, promosi menggunakan artikel, menggunakan teknik copywriting dan membuat landing page.</p>
+          <!-- <p style="font-weight: bold;">Baca Juga :</p> -->
+          <ul class="list-article">
+            <li>google ads</li>
+          </ul>
+          <p>Dengan menggunakan website ecommerce kamu juga bisa membuat konten artikel. Biasanya artikel yang dibuat berupa konten edukasi, seperti artikel ini. Terkadang mereka juga membuat konten artikel untuk mendapatkan trafik jumlah pengunjung website.</p>
+          <ul class="list-article">
+            <li>Menggunakan Teknik Copywriting</li>
+          </ul>
+          <p>Lalu ada copywriting, beda dengan artikel yang hanya berisi tulisan edukasi. Tulisan copywriting bertujuan untuk berjualan,tulisannya mengarahkan pembaca untuk membeli suatu produk.</p>
+          <ul class="list-article">
+            <li>dan landing page</li>
+          </ul>
+          <p>Lalu manfaat yang terakhir yaitu menggunakan landing page. Di dalam landing page inilah kamu bisa menggunakan teknik copywriting. Penggunaan bahasa yang singkat dan jelas menjadi kunci dalam pembuatan copywriting di dalam penyusunan landing page.</p>
+          <p>Inilah 7 manfaat ketika kamu memiliki website ecommerce. Dengan penjelasan tersebut apakah kamu semakin yakin  untuk menggunakan kepada kami? Jika belum, saya akan menjelaskan harga terbaik untuk membuat satu website ecommerce.</p>
+          <h4 style="font-weight: bold;">Harga Pembuatan Website Toko Online</h4>
+          <p>Harga yang harus kamu bayar untuk mendapatkan website ecommerce profesional mulai dari harga 1jutaan hingga 4 jutaan saja. Dengan harga murah ini, kamu sudah mendapatkan domain, desain custom sesuai dengan keinginan, setting konten, free ssl, frre setup fee, SEO basic, konsultasi sepuasnya, hosting dan fasilitas lain. Tergantung paket mana yang kamu pilih.</p>
+          <p>Jadi tunggu apalagi? Segera klik jasa membuat jasa ecommerce bersama JT Digitally. Untuk mendapatkan kualitas website yang menarik, responsif dan sesuai dengan kebutuhan bisnis kamu.</p>
         </div>
       </div>
     </article>
 
     <section class="previous">
-      <a href="#" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
-      <a href="jasa-pasang-iklan.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
+      <a href="jasa-branding.html" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
+      <a href="strategi-memperluas-jangkauan.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
     </section>
 
 
