--- a/pages/jasa-pasang-iklan.html
+++ b/pages/jasa-pasang-iklan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layanan Desain Grafis</title>
+    <title>Article - JT Digitally</title>
 
     <!-- ? Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -98,33 +98,45 @@
     <article class="container-article">
       <div class="box-article">
         <div class="article-img">
-          <img src="../assets/img/article/Layanan-Desain-Grafis-Di-Jakarta.png.jpg" alt="layanan desain grafis">
+          <img src="../assets/img/article/Jasa-pasang-iklan-online-1024x576.png.jpg" alt="#">
         </div>
   
         <div class="desc-article">
-          <h4>layanan desain grafis di jakarta harga pemula</h4>
-          <p>Layanan desain grafis di Jakarta – Siapa sih yang gak bisa desain menghasilkan desain grafis, di era saat ini? Hampir semua orang pasti bisa melakukannya. Sebab saat ini sudah terdapat aplikasi yang menyediakan ribuan template. Yang mana template tersebut dapat di edit secara gratis.</p>
-          <p>Di dalam proses edit desain grafis inilah yang menjadi hasil penentu kualitas. Jika kualitas desain grafis baik, maka ketika di posting untuk keperluan konten dapat mendatangkan engagement dari audience. Dan sebaliknya, jika kualitas konten kurang, maka tidak dapat mendatangkan apa – apa ketika di posting di media online.</p>
+          <h4>Jasa Pasang Iklan Online Di Jakarta</h4>
+          <p>Jasa pasang iklan online – Stres mikirin iklan yang tak kunjung mendapatkan rangking pertama di halaman pencarian? Apalagi, jika uang yang kamu keluarkan untuk ngiklan sudah melebihi batas maksimal. Pasti, rasanya tambah pusing. Dan kalau sudah seperti ini, mending pakai jasa digital marketing terbaik aja.</p>
+          <p>Jasa digital marketing terbaik yang ada di Jakarta saat ini ada JT Digitally. Salah satu layanan yang kamu cari, juga ada di sini loh, yaitu jasa pasang iklan di internet. Tapi, sebelumnya, kamu harus menentukan media apa yang ingin kamu gunakan untuk iklan.</p>
           <p>Kualitas desain yang kurang maksimal, mungkin disebabkan karena beberapa hal. Seperti banyak aktivitas bisnis yang harus dikerjakan, bukan prioritas dan tidak suka desain grafis. Penyebab tersebut mungkin saja bisa terjadi, karena kamu adalah bos yang memegang kendali atas bisnis yang sedang kamu jalani. Kalau sudah begini, mending pakai aja.</p>
-          <h4>jasa desain grafis murah dan amanah</h4>
-          <p>banyak layanan desain grafis di jakarta yang kurang murah tapi amanah. Kurang amanah yang saya maksud adalah semua permintaan yang diiinginkan oleh pengguna jasa tidak terpenuhi secara penuh</p>
-          <p>jika sudah begini maka tidak akan ada rasa saling menguntungkan, hanya pihak penyedia layanan saja yang akan merasa untung. Jasa yang seperti inilah yang sebenernya harus kamu hindari.</p>
-          <p>Untuk itu, JT Digitally hadir memberikan jasa desain grafis para pengusaha di Jakarta dengan harga miring kualitas terjamin.</p>
-          <h4>harga jasa desain grafis paling laris</h4>
-          <p>Apa keperluanmu, sehingga ingin menggunakan layanan jasa desain grafis? Apakah untuk desain branding, desain konten untuk iklan atau desain konten media sosial? Beda jenis desain, beda juga harga yang harus bayar untuk setiap jenis desain.</p>
-          <p>Desain branding meliputi jasa desain logo, jasa desain katalog produk, jasa desain company profile, jasa desain merchandise, jasa desain kartu nama, jasa desain kop surat, jasa desain map dan jasa desain label produk. Untuk desain iklan meliputi jasa banner iklan, jasa desain iklan di Facebook, Instagram, Tiktok dan jasa desain banner website. Dan untuk jasa desain sosmed ada jasa desain konten media sosial, jasa desain story media sosial dan jasa desain banner Facebook.</p>
+          <h4>Media Pasang Iklan Online Terlaris</h4>
+          <ul class="list-article">
+            <li>google ads</li>
+          </ul>
+          <p>Pengertian Google ads adalah iklan online lewat Google agar pengguna bisa menjangkau para konsumen lebih luas dan tepat saat konsumen tertarik pada jasa atau layanan.</p>
+          <p>Google ads saat ini memberikan harga murah bagi para pengusaha seperti kamu yang ingin memasarkan produk lewat Google ads. Di Indonesia, biaya per klik 800 rupiah untuk searching, 150 rupiah untuk display dan 30 rupiah untuk per view untuk video.</p>
+          <ul class="list-article">
+            <li>facobook ads</li>
+          </ul>
+          <p>Facebook ads adalah media untuk pasang iklan berbayar dari media sosial bernama Facebook yang berfungsi untuk membantu promosi bisnis, branding produk, jasa dan perseorangan. Untuk kemudian bisa muncul di halaman satu pencarian Facebook. Untuk biaya iklan Facebook ads saat ini berkisar antara 10.000 rupiah sampai 30.000 rupiah per hari.</p>
+          <ul class="list-article">
+            <li>instagram ads</li>
+          </ul>
+          <p>Instagram ads adalah media pasang iklan untuk mempromosikan produk dan layanan agar muncul di halaman pencarian Instagram yang ditargetkan. Untuk harga ketika menggunakan Instagram ads berkisar 7.000 ribu rupiah sampai 11.000 ribu rupiah per klik. Sedangkan untuk per 1.000 tayang kamu perlu menyiapkan dana sebesar 40.000 rupiah sampai 55.ribu rupiah.</p>
           <p style="font-weight: bold;">Baca Juga :</p>
-          <h4>jasa desain grafis terdekat</h4>
-          <p>Yang dekat belum tentu hebat. Gak perlu cari dekat jika kualitasnya bikin sekarat. Kata ini bertujuan supaya para pencari jasa desain grafis seperti kamu tidak memaksakan mencari layanan yang masih satu kota.</p>
-          <p>Dengan adanya media sosial, internet dan website, kamu bisa menggunakan jasa desain grafis yang ada di seluruh penjuru Indonesia, seperti di Jt Digitally di yang berada di kota jakarta.</p>
-          <p>Gak perlu datang langsung ke gedung penyedia jasa, proses pemesanan bisa melalui website dan proses diskusi bisa dilakukan dengan cara melalui Google Meeting. Dengan cara seperti ini kamu juga dapat menghemat energi dan waktu perjalanan untuk menuju ke lokasi secara langsung.</p>
+          <ul class="list-article">
+            <li>youtube ads</li>
+          </ul>
+          <p>Sama seperti media lainya, youtube ads adalah fitur yang menyediakan para pengusaha untuk pasang iklan berbayar di aplikasi Youtube. Youtube ads ini juga memiliki kelebihan dari antara ads yang lain, yaitu kamu hanya perlu membayar iklan yang memang ditonton sampai akhir. Jadi jika ada yang skip atau tidak menonton iklan sampai akhir, maka tidak masuk ke dalam tagihan pembayaran.</p>
+          <ul class="list-article">
+            <li>tiktok ads</li>
+          </ul>
+          <p>Aplikasi media sosial yang terakhir adalah Tiktok ads. Sebagai media sosial yang bisa dikatakan masih muda, tiktok juga gak mau kalah dengan yang tua. Tiktok saat ini juga bisa untuk pasang iklan.</p>
+          <p>Dari kelima media yang bisa dijadikan iklan tersebut, tentu memiliki kelebihan di masing – masing, sesuai dengan kebutuhan bisnis. Jadi gak ada kata salah pilihan ketika ingin ngiklan di internet. Tinggal sesuaikan target market dengan media iklan, setelah itu siapkan dana iklan, dan klik <strong>jasa ads.</strong></p>
         </div>
       </div>
     </article>
 
     <section class="previous">
-      <a href="#" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
-      <a href="jasa-pasang-iklan.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
+      <a href="layanan-desain.html" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
+      <a href="jasa-branding.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
     </section>
 
 
