--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
 
     <!-- ? Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- ? aos animate -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     
     <!-- ? cdn bootstrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -21,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <!-- ? favicos -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/img/Logo/favicon-logo.png" type="image/x-icon" />
 </head>
 <body>
     <!-- ? navbar -->
@@ -100,8 +103,8 @@
      <div class="box-container">
          <section class="about-hero-section">
             <div class="hero-content">
-                <h1>JT DIGITALLY</h1>
-                <p>Our digital expertise helps you to deliver your brand value and drive your business growth from the ground zero.</p>
+                <h1 data-aos="fade-up" data-aos-duration="1500">JT DIGITALLY</h1>
+                <p data-aos="fade-up" data-aos-duration="2000">Our digital expertise helps you to deliver your brand value and drive your business growth from the ground zero.</p>
             </div>
         </section>
      </div>
@@ -158,11 +161,11 @@
           <p><strong>T</strong> : +62 8129 0906 309</p>
           <p><strong>E</strong> : team@jtdigitally.com</p>
           <div class="social-icons">
-            <a href="#"><i class="ri-facebook-fill"></i></a>
-            <a href="#"><i class="ri-whatsapp-fill"></i></a>
-            <a href="#"><i class="ri-instagram-line"></i></a>
-            <a href="#"><i class="ri-youtube-fill"></i></a>
-            <a href="#"><i class="ri-tiktok-fill"></i></a>
+            <a href="https://www.facebook.com/people/JT-Digitally/100064052584721/"><i class="ri-facebook-fill"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=6281290906309&text=Hallo%20Admin%20JT,%20saya%20mau%20konsultasi%20tentang%20kebutuhan%20bisnis%20yaa"><i class="ri-whatsapp-fill"></i></a>
+            <a href="https://www.instagram.com/jtdigitally/"><i class="ri-instagram-line"></i></a>
+            <a href="https://www.youtube.com/channel/UCq6ABeXRSQmdE_xCh8xB06Q"><i class="ri-youtube-fill"></i></a>
+            <a href="https://www.tiktok.com/?_r=1"><i class="ri-tiktok-fill"></i></a>
             <a href="#"><i class="ri-mail-line"></i></a>
           </div>
         </div>
@@ -185,6 +188,13 @@
 
     <!-- ? Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- ? aos animate js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
 
     <script src="assets/js/script.js"></script>
 </body>
