--- a/article.html
+++ b/article.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Article - JT Digitally</title>
 
     <!-- ? Swiper CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
+    <!-- ? aos animate -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <!-- ? cdn bootstrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
@@ -21,19 +27,25 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <!-- ? favicos -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="assets/img/Logo/favicon-logo.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <header class="custom-navbar">
       <div class="navbar-container">
         <div class="logo">
-          <img src="assets/img/Logo/logo.png" alt="#">
+          <img src="assets/img/Logo/logo.png" alt="#" />
         </div>
 
         <ul class="nav-links" id="navLinks">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Services <i class="ri-arrow-down-s-line"></i></a></li>
+          <li>
+            <a href="#">Services <i class="ri-arrow-down-s-line"></i></a>
+          </li>
           <li><a href="article.html">Article</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Project</a></li>
@@ -45,96 +57,117 @@
 
         <!-- Slide Menu -->
         <div class="slide-menu" id="slideMenu">
-            <!-- ? tombol close -->
-            <button class="menu-close" id="menuClose">&times;</button>
+          <!-- ? tombol close -->
+          <button class="menu-close" id="menuClose">&times;</button>
 
-            <!-- ? kolom kiri -->
-            <div class="menu-left">
-              <div class="left-box">
-                 <img src="assets/img/Logo/logo.png" alt="">
-                <div class="list-menu-left">
-                  <h4>follow us</h4>
-                  <P>facebook</P>
-                  <p>whatsapp</p>
-                  <p>instagram</p>
-                  <p>youtube</p>
-                  <p>tiktok</p>
-                </div>
+          <!-- ? kolom kiri -->
+          <div class="menu-left">
+            <div class="left-box">
+              <img src="assets/img/Logo/logo.png" alt="" />
+              <div class="list-menu-left">
+                <h4>follow us</h4>
+                <p>facebook</p>
+                <p>whatsapp</p>
+                <p>instagram</p>
+                <p>youtube</p>
+                <p>tiktok</p>
               </div>
-            </div> 
+            </div>
+          </div>
 
-            <!-- ? kolom tengah -->
-            <div class="menu-center">
-              <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">service</a></li>
-                <li><a href="article.html">article</a></li>
-                <li><a href="#">contact</a></li>
-                <li><a href="#">project</a></li>
-              </ul>
-            </div> 
+          <!-- ? kolom tengah -->
+          <div class="menu-center">
+            <ul>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="#">service</a></li>
+              <li><a href="article.html">article</a></li>
+              <li><a href="#">contact</a></li>
+              <li><a href="#">project</a></li>
+            </ul>
+          </div>
 
-            <!-- ? kolom kanan --> 
-            <div class="menu-right">
-              <div class="right-box">
-                <div class="img-right">
-                  <img src="assets/img/Logo/Dekorasi-02.png" alt="">
-                </div>
-
-                <div>
-                  <h4>follow us</h4>
-                  <p><strong>T</strong>: +62 8129 0906 309</p>
-                  <p><strong>E</strong>: team@jtdigitally.com</p>
-                </div>
+          <!-- ? kolom kanan -->
+          <div class="menu-right">
+            <div class="right-box">
+              <div class="img-right">
+                <img src="assets/img/Logo/Dekorasi-02.png" alt="" />
               </div>
-              
-            </div> 
+
+              <div>
+                <h4>follow us</h4>
+                <p><strong>T</strong>: +62 8129 0906 309</p>
+                <p><strong>E</strong>: team@jtdigitally.com</p>
+              </div>
+            </div>
+          </div>
         </div>
-
       </div>
     </header>
 
     <section class="hero-section">
-        <div class="section-title-text article">
-          <p>RECENT BLOG</p>
-          <h2>
-            READ UPDATED <br />
-            JOURNAL
-          </h2>
-        </div>
+      <div class="section-title-text article" data-aos="fade-up" data-aos-duration="1000">
+        <p>RECENT BLOG</p>
+        <h2>
+          READ UPDATED <br />
+          JOURNAL
+        </h2>
+      </div>
 
-        <p class="description">Read our blog and try to see everything from every perspective. Our passion lies in making everything accessible and aesthetic for everyone.</p>
+      <p class="description" data-aos="fade-up" data-aos-duration="2000">
+        Read our blog and try to see everything from every perspective. Our
+        passion lies in making everything accessible and aesthetic for everyone.
+      </p>
     </section>
 
     <div class="article-search">
       <div class="search-wrapper">
         <i class="ri-search-line search-icon"></i>
-       <input type="text" id="searchInput" placeholder="Search for articles..." />
+        <input
+          type="text"
+          id="searchInput"
+          placeholder="Search for articles..."
+        />
       </div>
     </div>
 
-    <div class="article-section" id="articleSection">
-
-    </div>
-
+    <div class="article-section" id="articleSection"></div>
 
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-col logo-section">
-          <img src="assets/img/Logo/logo.png" alt="Digitally Logo" class="logo">
-          <p>Digital Marketing Agency yang memberikan servis terlengkap untuk semua kebutuhan branding Anda.</p>
+          <img
+            src="assets/img/Logo/logo.png"
+            alt="Digitally Logo"
+            class="logo"
+          />
+          <p class="desc-footer">
+            Digital Marketing Agency yang memberikan servis terlengkap untuk
+            semua kebutuhan branding Anda.
+          </p>
         </div>
         <div class="footer-col contact-section">
           <h3>CONTACT</h3>
           <p><strong>T</strong> : +62 8129 0906 309</p>
           <p><strong>E</strong> : team@jtdigitally.com</p>
           <div class="social-icons">
-            <a href="#"><i class="ri-facebook-fill"></i></a>
-            <a href="#"><i class="ri-whatsapp-fill"></i></a>
-            <a href="#"><i class="ri-instagram-line"></i></a>
-            <a href="#"><i class="ri-youtube-fill"></i></a>
-            <a href="#"><i class="ri-tiktok-fill"></i></a>
+            <a
+              href="https://www.facebook.com/people/JT-Digitally/100064052584721/"
+              ><i class="ri-facebook-fill"></i
+            ></a>
+            <a
+              href="https://api.whatsapp.com/send?phone=6281290906309&text=Hallo%20Admin%20JT,%20saya%20mau%20konsultasi%20tentang%20kebutuhan%20bisnis%20yaa"
+              ><i class="ri-whatsapp-fill"></i
+            ></a>
+            <a href="https://www.instagram.com/jtdigitally/"
+              ><i class="ri-instagram-line"></i
+            ></a>
+            <a href="https://www.youtube.com/channel/UCq6ABeXRSQmdE_xCh8xB06Q"
+              ><i class="ri-youtube-fill"></i
+            ></a>
+            <a href="https://www.tiktok.com/?_r=1"
+              ><i class="ri-tiktok-fill"></i
+            ></a>
             <a href="#"><i class="ri-mail-line"></i></a>
           </div>
         </div>
@@ -142,22 +175,34 @@
           <h3>ADDRESS</h3>
           <div>
             <p><strong>YOGYAKARTA</strong></p>
-            <p>JALAN BIMA NO. 164, PANGGUNGSARI, SARIHARJO, NGAGLIK, SLEMAN, YOGYAKARTA</p>
+            <p>
+              JALAN BIMA NO. 164, PANGGUNGSARI, SARIHARJO, NGAGLIK, SLEMAN,
+              YOGYAKARTA
+            </p>
           </div>
           <div>
             <p><strong>JAKARTA</strong></p>
-            <p>JL. CAKALANG NO.26, RT.10/RW.8, JATI, KEC. PULO GADUNG, KOTA JAKARTA TIMUR, DAERAH KHUSUS IBUKOTA JAKARTA 13220</p>
+            <p>
+              JL. CAKALANG NO.26, RT.10/RW.8, JATI, KEC. PULO GADUNG, KOTA
+              JAKARTA TIMUR, DAERAH KHUSUS IBUKOTA JAKARTA 13220
+            </p>
           </div>
         </div>
       </div>
-      <hr>
+      <hr />
       <p class="footer-bottom">© 2021 JT Digitally. All Right Reserved</p>
     </footer>
-
 
     <!-- ? Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <!-- ? aos animate js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
+
     <script src="assets/js/script.js"></script>
-</body>
+  </body>
 </html>
