--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <!-- ? aos animate -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" /> -->
     
     <!-- ? cdn bootstrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -416,7 +416,7 @@
       </div>
     </section>
     
-    <h1 class="text-center" data-aos="fade-up" data-aos-duration="1500">start project with us</h1>
+    <h1 class="text-center">start project with us</h1>
 
     <div class="button">
       <a href="#" class="btn"><i class="ri-arrow-right-line"></i> +62 812-9090-6309</a>
@@ -473,11 +473,11 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!-- ? aos animate js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
       AOS.init();
-    </script>
+    </script> -->
 
     <script src="assets/js/script.js"></script>
   </body>
