menambahkan isi content menu article

--- a/pages/trik-memenangkan-persaingan.html
+++ b/pages/trik-memenangkan-persaingan.html
@@ -175,7 +175,7 @@
 
     <section class="previous">
       <a href="strategi-memperluas-jangkauan.html" class="left"><i class="ri-arrow-left-line"></i>  previous post</a>
-      <a href="#" class="right">next post <i class="ri-arrow-right-line"></i></a>
+      <a href="cara-mendapatkan-ide-konten.html" class="right">next post <i class="ri-arrow-right-line"></i></a>
     </section>
 
 
